<resources>
    <string name="app_name">کتابخانه من</string>
    <string name="title">کتابخانه من</string>
    <string name="not_bot">من ربات نیستم!</string>
    <string name="verify">تایید</string>
    <string name="shole">شله</string>
    <string name="halim">حلیم</string>
    <string name="tokhme">تخمه</string>
    <string name="blue">آبی</string>
    <string name="red">قرمز</string>
    <string name="defaultt">پیشفرض</string>
    <string name="about">درباره</string>
    <string name="new_book">کتاب جدید</string>
    <string name="show_book_list">لیست کتابها</string>
    <string name="add_a_new_book">اضافه کردن کتاب جدید</string>
    <string name="book_title">عنوان کتاب</string>
    <string name="current_page">صفحه ی کنونی</string>
    <string name="completely_read">به طور کامل خوانده ام</string>
    <string name="submit_book">ثبت کتاب</string>
    <string name="edit_book">ویرایش کتاب</string>
    <string name="apply_changes">ثبت ویرایش</string>
    <string name="apply">ثبت</string>
    <string name="book_image">تصویر کتاب</string>
    <string name="book_author">نویسنده کتاب</string>
    <string name="finished">تکمیل شده</string>
    <string name="current_page_colon">پیج کنونی:</string>
    <string name="page">صفحه</string>
    <string name="sample_number">123</string>
    <string name="some">چند</string>
    <string name="pages">صفحه</string>
    <string name="author">نویسنده</string>
    <string name="title_book">عنوان</string>
    <string name="total_pages">تعداد صفحات</string>
    <string name="description">توضیحات</string>
    <string name="current_reading_state">وضعیت تکمیل کتاب</string>
    <string name="wanna_read">میخوام بخونم</string>
    <string name="reading">در حال خواندن</string>
    <string name="completed">تکمیل شده</string>
    <string name="all_books">همه کتابها</string>
    <string name="set_book_image">ثبت تصویر کتاب</string>
    <string name="delete">حذف کردن</string>
    <string name="delete_confirmation">آیا از حذف کردن این کتاب اطمینان دارید؟</string>
    <string name="yes">بله</string>
    <string name="no">خیر</string>
    <string name="about_dialogue">سازنده برنامه: امیرمهدی خبوشانی</string>
    <string name="delete_title">حذف کتاب</string>
    <string name="sort_by">مرتب سازی بر اساس</string>
    <string name="progress">پیشرفت</string>
    <string name="ascending">صعودی</string>
    <string name="descending">نزولی</string>
    <string name="search">جستجو</string>
    <string name="recyclerview_placeholder">کتابی برای نشون دادن وجود نداره!\n برای اضافه کردن کتاب میتونید علامت بعلاوه اون پایین رو بزنید.</string>
    <string name="shareIntro">سلام، من تازگیا دارم این کتابو میخونم:</string>
    <string name="pages_read">صفحاتی که خوندم:</string>
    <string name="of">از</string>
    <string name="promotion">تو هم میتونی برای مدیریت کتابات از اپلیکیشن "کتابخانه من" استفاده کنی:\n https://myket.ir/app/com.fmgames.library</string>

</resources>
