<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/all_books"
        android:id="@+id/allBooksMenu"
        android:icon="@drawable/books"
        app:showAsAction="ifRoom"
        />

    <item
        android:title="@string/reading"
        android:id="@+id/readingMenu"
        android:icon="@drawable/reading"
        app:showAsAction="ifRoom"
        />

    <item
        android:title="@string/wanna_read"
        android:id="@+id/wannaReadMenu"
        android:icon="@drawable/book"
        app:showAsAction="ifRoom"
        />

    <item
        android:title="@string/completed"
        android:id="@+id/completedMenu"
        android:icon="@drawable/checked"
        app:showAsAction="ifRoom"
        />





</menu>