<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:id="@+id/relativeLayout">

    <ImageView
        android:id="@+id/listItemImageView"
        android:layout_width="110dp"
        android:layout_height="150dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/book_image"
        android:src="@drawable/bookcover2" />

    <TextView
        android:id="@+id/listItemBookName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/listItemImageView"
        android:text="@string/book_title"
        android:layout_marginTop="4dp"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/listItemBookAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/listItemImageView"
        android:layout_below="@id/listItemBookName"
        android:text="@string/book_author"
        android:layout_marginTop="4dp"
        android:textSize="14sp"
        />

    <TextView
        android:id="@+id/listItemBookTotalPages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/listItemImageView"
        android:layout_below="@id/listItemBookAuthor"
        android:text="@string/some"
        android:layout_marginTop="4dp"
        android:textSize="14sp"
        />

    <TextView
        android:id="@+id/listItemBookTotalPagesString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_toEndOf="@id/listItemBookTotalPages"
        android:layout_below="@id/listItemBookAuthor"
        android:text="@string/pages"
        android:layout_marginTop="4dp"
        android:textSize="14sp"
        />

    <TextView
        android:id="@+id/listItemBookHaveRead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/listItemImageView"
        android:layout_alignBottom="@id/listItemImageView"
        android:text="@string/finished"
        android:layout_marginBottom="10dp"
        android:textSize="18sp"
        android:textColor="@color/green"
        />

    <TextView
        android:id="@+id/listItemBookCurrentPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/sample_number"
        android:layout_marginTop="8dp"
        android:textSize="23sp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        />

</RelativeLayout>