<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/title"
        android:textSize="30sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimary">
    </TextView>

    <CheckBox
        android:id="@+id/cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/txt"
        android:layout_marginTop="25dp"
        android:text="@string/not_bot"
        android:textSize="18sp"
        android:checked="false"
         />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radio"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/cb"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:checkedButton="@id/radioBtnDefault">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defaultt"
            android:id="@+id/radioBtnDefault"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/red"
            android:id="@+id/radioBtnRed"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blue"
            android:id="@+id/radioBtnBlue"
            />
    </RadioGroup>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:layout_below="@id/radio"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/show_book_list"
        android:textColor="@color/colorPrimaryDark"
        android:onClick="btnClick"/>



    <ListView
        android:id="@+id/list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button"
        android:layout_marginTop="10dp"
        android:cacheColorHint="#1F33E8" />



</RelativeLayout>