<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<RelativeLayout
    tools:context=".NewBookActivity"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <TextView
        android:id="@+id/txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/add_a_new_book"
        android:textSize="30sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimary">
    </TextView>

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/imageButton"
        android:layout_width="98dp"
        android:layout_height="150dp"
        android:layout_below="@id/txt2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="#FFFFFF"
        android:contentDescription="@string/set_book_image"
        android:onClick="onAddCover"
        android:scaleType="fitCenter"
        app:placeholderImage="@drawable/cover_edit" />

    <EditText
        android:id="@+id/bookNameEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageButton"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="10dp"
        android:autofillHints="@string/title_book"
        android:gravity="center_horizontal"
        android:hint="@string/title_book"
        android:inputType="textCapSentences"
        android:singleLine="true"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/bookAuthorEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bookNameEdit"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:hint="@string/author"
        android:inputType="textCapWords"
        android:singleLine="true"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/currentPageEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bookAuthorEdit"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="5dp"
        android:hint="@string/current_page"
        android:inputType="number"
        android:textAlignment="center"
        android:gravity="center_horizontal" />

    <EditText
        android:id="@+id/totalPagesEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/currentPageEdit"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="5dp"
        android:hint="@string/total_pages"
        android:inputType="number"
        android:textAlignment="center"
        android:gravity="center_horizontal" />

    <EditText
        android:id="@+id/bookDescEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/totalPagesEdit"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:hint="@string/description"
        android:inputType="textCapSentences"
        android:textAlignment="center"
        android:maxLength="33"
        />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bookDescEdit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:dropDownWidth="match_parent"
        android:spinnerMode="dropdown"
        android:prompt="@string/current_reading_state"
        />

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="5dp"
        android:onClick="onSubmit"
        android:text="@string/submit_book"
        android:textColor="@color/colorPrimaryDark" />

</RelativeLayout>

</ScrollView>