<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".EditBookActivity">

    <TextView
        android:id="@+id/txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/edit_book"
        android:textSize="30sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimary">
    </TextView>

    <EditText
        android:id="@+id/bookNameEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt2"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="25dp"
        android:gravity="center_horizontal"
        android:hint="@string/title_book"
        android:inputType="textCapSentences"
        android:singleLine="true"
        android:textAlignment="center"
        android:autofillHints="@string/title_book" />

    <EditText
        android:id="@+id/bookAuthorEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bookNameEdit"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:hint="@string/author"
        android:inputType="textCapWords"
        android:singleLine="true"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/currentPageEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bookAuthorEdit"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="5dp"
        android:hint="@string/current_page"
        android:inputType="number"
        android:textAlignment="center"
        android:gravity="center_horizontal" />

    <EditText
        android:id="@+id/totalPagesEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/currentPageEdit"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="5dp"
        android:hint="@string/total_pages"
        android:inputType="number"
        android:textAlignment="center"
        android:gravity="center_horizontal" />

    <EditText
        android:id="@+id/bookDescEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/totalPagesEdit"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:hint="@string/description"
        android:inputType="textCapSentences"
        android:maxLength="33"
        android:textAlignment="center" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bookDescEdit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:dropDownWidth="match_parent"
        android:spinnerMode="dropdown"
        android:prompt="@string/current_reading_state"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/submitBtn"
        android:layout_below="@id/spinner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/apply_changes"
        android:textColor="@color/colorPrimaryDark"
        android:onClick="onSubmit"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/deleteBtn"
        android:layout_below="@id/submitBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="delete"
        android:textColor="@color/full_red"
        android:onClick="onDelete"
        />

</RelativeLayout>